Implemented Transaction History

--- a/src/app/components/history/history-header/history-header.component.html
+++ b/src/app/components/history/history-header/history-header.component.html
@@ -1,8 +1,8 @@
 <div class="header">
   <div class="back">
-    <i class="material-icons">
+    <i class="material-icons" (click)="backToChat()">
       arrow_back
-      </i>
+    </i>
   </div>
   <div class="title">
     <h4>Transaction History</h4>
