--- a/src/app/modules/header/header.component.css
+++ b/src/app/modules/header/header.component.css
@@ -140,12 +140,13 @@ img {
 .dropdown:hover .dropbtn {
   color: black;
 }
-.user-options{
+.user-options {
   display: flex;
   margin: auto;
   justify-content: space-between;
+  align-items: center;
 }
-.dropdown-links{
+.dropdown-links {
   display: block;
   margin: auto;
   padding: 5px;
@@ -154,7 +155,7 @@ img {
   font-weight: 600;
   color: var(--theme-color);
 }
-.dropdown-links a{
+.dropdown-links a {
   display: block;
   padding-left: 5px;
   margin: 2%;
