--- a/src/app/modules/ordering-history/ordering-history.component.css
+++ b/src/app/modules/ordering-history/ordering-history.component.css
@@ -1,3 +1,11 @@
+.noDataAvailable {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .carousel-container {
   width: 100%;
   height: 80%;
