--- a/src/app/components/chatbot/chat-input/chat-input.component.css
+++ b/src/app/components/chatbot/chat-input/chat-input.component.css
@@ -102,9 +102,9 @@ input {
 }
 
 @media screen and (min-width: 320px) {
-  .header {
+  .input-block {
     width: 100%;
-    height: 8%;
+    height: 51px;
   }
   .text {
     width: 40px;
@@ -120,10 +120,29 @@ input {
   }
 }
 
+@media screen and (min-width: 375px) {
+  .input-block {
+    width: 100%;
+    height: 60px;
+  }
+  .text {
+    width: 50px;
+    height: 50px;
+  }
+  .voice {
+    width: 50px;
+    height: 50px;
+  }
+  .input-box {
+    width: 80%;
+    height: 50px;
+  }
+}
+
 @media screen and (min-width: 411px) {
   .input-block {
     width: 100%;
-    height: 8%;
+    height: 60px;
   }
   .text {
     width: 50px;
