--- a/src/app/modules/card/card.component.html
+++ b/src/app/modules/card/card.component.html
@@ -1,40 +1,13 @@
 <div class="card-container">
-  <mat-carousel
-    class="imgcarousel"
-    timings="10ms ease-in"
-    [autoplay]="false"
-    interval="5000"
-    color="accent"
-    maxWidth="auto"
-    proportion="60"
-    slides="data['images'].length"
-    [loop]="true"
-    [hideArrows]="false"
-    [hideIndicators]="true"
-    [useKeyboard]="true"
-    [useMouseWheel]="false"
-    orientation="ltr"
-  >
-    <mat-carousel-slide
-      #matCarouselSlide
-      *ngFor="let image of data['images']; let i = index"
-      [image]="image"
-      overlayColor="#00000040"
-      [hideOverlay]="false"
-    ></mat-carousel-slide>
-  </mat-carousel>
-  <!--
-      <div class="image-container" *ngFor="let image of data['images']">
-        <div class="image">
-          <img
-            [src]="image"
-            alt="image slide"
-            class="restaurant-image"
-            onError="this.src='https://icon-library.net/images/no-image-available-icon/no-image-available-icon-6.jpg';"
-          />
-        </div>
+
+  <mdb-carousel class="carousel slide carousel-slide" [animation]="'slide'" [interval]="'0'">
+    <mdb-carousel-item *ngFor="let image of data['images']; let i = index">
+      <div id="imgcarousel" class="view w-100">
+        <img class="d-block w-100" [src]="image" />
       </div>
-      -->
+    </mdb-carousel-item>
+  </mdb-carousel>
+
   <div class="card">
     <div class="restaurantInfo">
       <div class="restaurantName">
