--- a/src/app/modules/header/header.component.css
+++ b/src/app/modules/header/header.component.css
@@ -174,55 +174,76 @@ img {
 @media screen and (min-width: 320px) {
   .header {
     width: 100%;
-    height: 10%;
+    height: 62px;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .header {
+    width: 100%;
+    height: 80px;
   }
 }
 
 @media screen and (min-width: 411px) {
   .header {
     width: 100%;
-    height: 10%;
+    height: 76px;
   }
 }
 
 @media screen and (min-width: 481px) {
   .header {
     width: 100%;
-    height: 10%;
+    height: 76px;
   }
 }
 
 @media screen and (min-width: 600px) {
   .header {
     width: 100%;
-    height: 10%;
+    height: 76px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .header {
     width: 100%;
-    height: 10%;
+    height: 102px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .header {
     width: 100%;
-    height: 10%;
+    height: 136px;
   }
 }
 
 @media screen and (min-width: 1260px) {
   .header {
     width: 100%;
-    height: 10%;
+    height: 60px;
   }
 }
 
 @media screen and (min-width: 1281px) {
   .header {
     width: 100%;
-    height: 10%;
+    height: 60px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header {
+    width: 100%;
+    height: 60px;
+  }
+}
+
+@media screen and (min-width: 2300px) {
+  .header {
+    width: 100%;
+    height: 60px;
   }
 }
