--- a/src/app/components/history/history.component.css
+++ b/src/app/components/history/history.component.css
@@ -5,6 +5,22 @@
   overflow: hidden;
 }
 
+.loader{
+  padding-left: 35%;
+  padding-right: 35%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  width: 100%;
+  bottom: 10%;
+}
+
+.loader-image{
+  width: 100%;
+  max-width: 200px;
+  padding: 0px;
+  margin: 0px;
+}
+
 .categories {
   background-color: #545454;
   width: 100%;
