--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -226,6 +226,7 @@
   border-color: var(--theme-color);
   font-size: 14px;
   cursor: pointer;
+  outline: none;
   box-shadow: 1px 2px #8d8d8d;
 }
 
