--- a/src/app/modules/ordering-history/ordering-history.component.html
+++ b/src/app/modules/ordering-history/ordering-history.component.html
@@ -13,12 +13,12 @@
       <div class="ordering-details">
         <div class="orderingId">
           <p style="margin-bottom: 1%;">Order ID : {{ slide["orderId"] }}</p>
-          <p>Date : {{ slide["date"] }}</p>
-          <p>Time : {{ slide["time"] }}</p>
+          <p>Date : {{ slide["date"].split(" ")[0] }}</p>
+          <p>Time : {{ slide["time"].split(" ")[1] }}</p>
         </div>
         <hr />
         <div class="restaurant-details">
-          <p class="sectionHeading">Ordeing From :</p>
+          <p class="sectionHeading">Ordering From :</p>
           <div class="restaurantName">
             <h1>{{ slide["restaurantName"] }}</h1>
           </div>
