--- a/src/app/modules/loader/loader/loader.component.css
+++ b/src/app/modules/loader/loader/loader.component.css
@@ -1,6 +1,8 @@
-.loader-image{
-    width: 100%;
-    max-width: 200px;
-    padding: 0px;
-    margin: 0px;
+.loader-image {
+  width: 100%;
+  height: 5%;
+  max-width: 200px;
+  max-height: 50px;
+  padding: 0px;
+  margin: 0px;
 }
