small changes for loader and listening loader

--- a/src/app/modules/loader/loader/loader.component.html
+++ b/src/app/modules/loader/loader/loader.component.html
@@ -9,6 +9,6 @@
   <img
     src="../../assets/media/listening.gif"
     alt="Listening"
-    class="loader-image"
+    class="listen-image"
   />
 </div>
