--- a/src/app/modules/loader/loader/loader.component.css
+++ b/src/app/modules/loader/loader/loader.component.css
@@ -6,3 +6,13 @@
   padding: 0px;
   margin: 0px;
 }
+
+.listen-image {
+  width: 100%;
+  height: 5%;
+  max-width: 200px;
+  max-height: 50px;
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 10px;
+}
