Added a media file in assets

--- a/src/app/modules/loader/loader/loader.component.html
+++ b/src/app/modules/loader/loader/loader.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isDivVisible">
   <img
-    src="https://media.giphy.com/media/WOZVhRvUaR2t51GK6v/giphy.gif"
+    src="../../assets/media/loading.gif"
     alt="Loading"
     class="loader-image"
   />
