--- a/src/app/modules/booking-history/booking-history.component.css
+++ b/src/app/modules/booking-history/booking-history.component.css
@@ -128,10 +128,12 @@
   font-weight: bolder;
 }
 
-.Booked h1 {
+.Booked img {
   color: #3c763d;
   font-size: 18px;
   margin: 0%;
+  width: 100%;
+  height: 20%;
 }
 
 .Cancelled {
@@ -145,10 +147,12 @@
   font-weight: bolder;
 }
 
-.Cancelled h1 {
+.Cancelled img {
   color: #a94442;
   font-size: 18px;
   margin: 0%;
+  width: 100%;
+  height: 20%;
 }
 
 .title {
@@ -275,7 +279,7 @@
 
 .billing-details hr {
   padding: 0%;
-  margin: 0%;
+  margin: 1% 0%;
 }
 
 .pointsAfterPayment {
