--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -18,7 +18,8 @@
   display: block;
   position: relative;
   width: 100%;
-  height: 240px;
+  height: auto;
+  max-height: 240px;
 }
 
 #imgcarousel img {
