--- a/src/app/modules/booking-history/booking-history.component.css
+++ b/src/app/modules/booking-history/booking-history.component.css
@@ -102,10 +102,10 @@
 }
 
 .container {
-  width: 100%;
+  width: 90%;
   height: auto;
-  margin: 3% 0%;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
+  margin: 3% 5% 7% 5%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 12px, rgba(0, 0, 0, 0.2) 0px 6px 6px;
   display: flex;
   background-color: #fff;
 }
