Minor UI bug fixes

--- a/src/app/components/history/history-header/history-header.component.html
+++ b/src/app/components/history/history-header/history-header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
-  <div class="back">
-    <i class="material-icons" (click)="backToChat()">
+  <div class="back" (click)="backToChat()">
+    <i class="material-icons">
       arrow_back
     </i>
   </div>
