--- a/src/app/modules/bookingsummarycard/bookingsummarycard.component.html
+++ b/src/app/modules/bookingsummarycard/bookingsummarycard.component.html
@@ -42,7 +42,7 @@
           Guests : <span>X {{ data["noOfGuests"] }}</span>
         </p>
         <hr />
-        <p>
+        <p style="margin-top: 5%;">
           Final Amount :
           <span>{{ data["perPersonPoints"] * data["noOfGuests"] }} points</span>
         </p>
