--- a/src/app/modules/bookingsummarycard/bookingsummarycard.component.css
+++ b/src/app/modules/bookingsummarycard/bookingsummarycard.component.css
@@ -45,10 +45,12 @@
   font-weight: bolder;
 }
 
-.booked h1 {
+.booked img {
   color: #3c763d;
   font-size: 18px;
   margin: 0%;
+  width: 100%;
+  height: 20%;
 }
 
 .cancelled {
@@ -62,10 +64,12 @@
   font-weight: bolder;
 }
 
-.cancelled h1 {
+.cancelled img {
   color: #a94442;
   font-size: 18px;
   margin: 0%;
+  width: 100%;
+  height: 20%;
 }
 
 .title {
