--- a/src/app/modules/orderingsummarycard/orderingsummarycard.component.css
+++ b/src/app/modules/orderingsummarycard/orderingsummarycard.component.css
@@ -50,9 +50,10 @@
 }
 
 .ordered h1 {
-  color: #3c763d;
-  font-size: 18px;
-  margin: 0%;
+    color: #3c763d;
+    font-size: 22px;
+    font-weight: bolder;
+    margin: 0%;
 }
 
 .cancelled {
@@ -72,8 +73,9 @@
 
 .cancelled h1 {
   color: #a94442;
-  font-size: 18px;
+  font-size: 22px;
   margin: 0%;
+  font-weight: bolder;
 }
 
 .title {
