added voice functionality to carousel

--- a/src/app/modules/card/card.component.html
+++ b/src/app/modules/card/card.component.html
@@ -59,9 +59,9 @@
         >
       </div>
     </div>
-    <div class="proceed-button" (click)="proceedForBooking()">
+    <button class="proceed-button" (click)="proceedForBooking()">
       <p>Proceed To Book</p>
-    </div>
+    </button>
   </div>
 </div>
 <div class="browse-button">
